# routes

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRODUCTION.md  README.md  SKILL.md
.github/: actionlint.yaml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  live-evidence.yml  quality.yml  release.yml
docs/: README.md  live-evidence.md  production-readiness.md  router-improvements-audit.md  security.md  usage.md
docs/deployment/: aws-apprunner.md  azure-container-apps.md  cloudflare-containers.md  container.md  google-cloud-run.md
docs/examples/: router.production.yaml
docs/monitoring/: README.md  grafana-dashboard.json  prometheus-alerts.yml
evidence/: README.md
evidence/baselines/ed9e38e1a1bb4117742559266818a294c9fd9622/: router.controlled-benchmark.json  router.controlled-conformance.json  router.controlled-evidence-manifest.json
examples/: README.md  chat_completion.sh  classify.sh  eval.jsonl  eval.production.jsonl  multimodel.sh  route.sh  router.minimal.yaml  router.privacy.yaml  router.yaml
examples/client-config/: aider.sh  autohand-code-cli.json  codex.env  cursor.md  hermes.yaml  openclaw.json  pi-models.json
scripts/: audit-dependencies.sh  check-contracts.sh  release-metadata.sh  test-advisory-exceptions.sh
security/: advisory-exceptions.txt
security/test-fixtures/: expired.txt  future.txt  invalid-date.txt  malformed.txt
src/: accounting.rs  classifier.rs  classifier_gate.rs  config.rs  config_schema.rs  conformance.rs  deployment_gate.rs  eval.rs  evidence.rs  file_state.rs  health.rs  jsonl_writer.rs  judge.rs  lib.rs  load.rs  main.rs  metrics.rs  openapi.rs  promotion.rs  provider.rs  router.rs  runtime_gate.rs  semantic_cache.rs  server.rs  shadow_eval.rs  sticky.rs  stream_gate.rs  telemetry.rs  tokens.rs  types.rs
tests/: deployment_gate.rs
