[package]
name = "autohandai-router"
version = "0.1.0-canary.3"
edition = "2024"
rust-version = "1.96"
description = "OpenAI-compatible routing layer for multi-model, multi-provider inference"
readme = "README.md"
repository = "https://github.com/autohandai/routes"
homepage = "https://github.com/autohandai/routes"
documentation = "https://docs.rs/autohandai-router"
license-file = "LICENSE"
keywords = ["llm", "router", "openai", "inference", "agent"]
categories = ["web-programming", "network-programming", "command-line-utilities"]
publish = ["crates-io"]

[[bin]]
name = "routes"
path = "src/main.rs"

[lib]
name = "autohand_router"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["multipart"] }
bytes = "1.11"
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
fs4 = "1.1"
httpdate = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net", "io-util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.11", features = ["v4"] }
